--- a/app/views/logins/login.erb
+++ b/app/views/logins/login.erb
@@ -9,6 +9,10 @@
             <p>Email: <input type="text" name="email"></p>
             <p>Password: <input type="password" name="password"></p>
             <button type="submit" id="submit">Log In</button>
+            
+        </form>
+        <form action="/signups" method="POST">
+            <button type="submit" id="submit">Sign Up</button>
         </form>
     
     </body>
