--- a/app/views/signups/signup.erb
+++ b/app/views/signups/signup.erb
@@ -5,21 +5,26 @@
     </style>
     </head>
     <body>
+        <font color="red">
+            <% if flash.has?(:message) %>
+                <%= flash[:message] %>
+            <% end %>
+        </font>
         <h1>Sign Up Below:</h1>
 
-    <form method="post" action="/signups">
-        <label for="name">Name: </label>
-        <input id="name" type="text" name="name">
-
-        <label for="email">Email: </label>
-        <input id="email" type="text" name="email">
-
-        <label for="password">Password: </label>
-        <input id="password" type="text" name="password">
-
-        <input type="submit" value="Sign Up">
-
-    </form>
+        <form method="post" action="/signups">
+            <label for="name">Name: </label>
+            <input id="name" type="text" name="name">
+    
+            <label for="email">Email: </label>
+            <input id="email" type="email" name="email">
+    
+            <label for="password">Password: </label>
+            <input id="password" type="password" name="password">
+    
+            <input type="submit" value="Sign Up">
+    
+        </form>
     
     </body>
 </html>
