--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -1,1 +1,31 @@
-<h1>Insert the form to edit an instance of your model here.</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+    <style>
+    </style>
+    </head>
+    <body>
+        <font color="red">
+            <% if flash.has?(:message) %>
+                <%= flash[:message] %>
+            <% end %>
+        </font>
+        <h1>Edit below:</h1>
+
+        <form method="post" action="/users/<%= @current_user.id %>/edit">
+            <input id="hidden" type="hidden" name="_method" value="patch">
+
+            <label for="name">Name: </label>
+            <input id="name" type="text" name="name" value="<%= @current_user.name%>">
+    
+            <label for="email">Email: </label>
+            <input id="email" type="email" name="email" value="<%= @current_user.email%>">
+
+            <input id="hidden" type="hidden" name="password">
+    
+            <input type="submit" value="Update Info">
+    
+        </form>
+    
+    </body>
+</html>
