--- a/app/views/wishlists/index.erb
+++ b/app/views/wishlists/index.erb
@@ -9,3 +9,10 @@
 <form action="/wishlists/<%= @user.id %>/new" method="GET">
     <p><button type="submit" id="submit">Make My Next Wish!</button></p>
 </form>
+<form action="/users/:id/home">
+    <button type="submit">Home</button>
+</form>
+<form action="/logout">
+    <button type="submit">Log Out</button>
+</form>
+
