added CSS to HTML, need to fix wishlist PATCH route

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,9 +10,30 @@
     <title>SantasList</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One|Cinzel|Lakki+Reddy|Londrina+Shadow|Righteous|Rye|Ultra|Fredericka+the+Great|' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
+  <style>
+  
+    body {
+      color: white;
+      background-image: url(https://cdn.pixabay.com/photo/2017/11/13/13/34/christmas-card-2945633_960_720.jpg);
+      background-size: cover;
+      text-align: center;
+      font-family: 'Cinzel', serif;
+    }
+
+    footer {
+      text-align: left;
+    }
+
+    .wrapper {
+      background: #F81E1E;
+    }
+
+  
+  
+  </style>
   <body>
     <div class="wrapper">
 
