--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <head>
-  
+      <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One|Cinzel|Lakki+Reddy|Londrina+Shadow|Righteous|Rye|Ultra|Fredericka+the+Great|' rel='stylesheet' type='text/css'>
 </head>
+
+<style>
+
+button {
+       display: inline;
+       border-radius: 100px;
+       font-family: 'Cinzel', serif;
+}
+
+.button1 {
+       float: left;
+}
+
+.button2 {
+       float: right;
+}
+
+</style>
 
 <body>
   <h1>Welcome to your Santa's List</h1>
   <h4>Please log in to your Santa's List to continue wishing!</h4>
   <br>
-  <h4>If you have not created a Santa's List yet, no worries just follow the sign up link below to get started!! </h4>
+  <h4>If you have not created a Santa's List yet,</h4>
+  <h4> no worries just follow the sign up link below to get started!!</h4>
   <%# <a href='/logins/login'>Log In</a> %>
   <br>
-  <form action="/logins/login">
+  <div class="button1">
+       <form action="/logins/login">
          <p><button type="submit">Log In</button></p>
-  </form>
+       </form>
+  </div>
   <%# <a href="/signups/signup">Sign Up</a> %>
-  <form action="/signups/signup">
+  <div class="button2">
+       <form action="/signups/signup">
          <p><button type="submit">Sign up</button></p>
-  </form>
-
+       </form>
+  </div>
 </body>
 
 </html>
