--- a/app/views/wishlists/edit.erb
+++ b/app/views/wishlists/edit.erb
@@ -1,1 +1,21 @@
-<h1>Insert the form to edit an instance of your model here.</h1>
+<h1>Change your Wish Here!</h1>
+<font color="red">
+  <% if flash.has?(:message) %>
+    <%= flash[:message] %>
+  <% end %>
+</font>
+<br>
+<form action="/wishlists/<%= @wish.id %>/edit" method="POST">
+<input id="hidden" type="hidden" name="_method" value="PATCH" >
+    <h4><label for="wish_item"> Change Your Wish!</label></h4>
+    <br>
+    <p>My wish for today is: <input type="text" name="content"></p> 
+    <button type="submit" id="submit">Change My Wish!</button>
+</form>
+
+<form action="/wishlists/<%= @current_user.id %>/index">
+    <button type="submit">Wishlist!</button>
+</form>
+<form action="/users/:id/home">
+    <button type="submit">Home</button>
+</form>
