fixed wishlist patch route, added more css and functionality

--- a/app/views/logins/login.erb
+++ b/app/views/logins/login.erb
@@ -2,18 +2,23 @@
 <html>
     <head>
     <style>
+
+    
+
     </style>
     </head>
     <body>
-        <form action="/logins" method="POST">
-            <p>Email: <input type="text" name="email"></p>
-            <p>Password: <input type="password" name="password"></p>
-            <button type="submit" id="submit">Log In</button>
-            
-        </form>
-        <form action="/signups" method="POST">
-            <button type="submit" id="submit">Sign Up</button>
-        </form>
+        <div>
+            <form action="/logins" method="POST">
+                <div>
+                    <p>Email: <input type="text" name="email"></p>
+                    <p>Password: <input type="password" name="password"></p>
+                    <button type="submit" id="submit">Log In</button>
+                </div>
+            </form>
+            <form action="/signups" method="POST">
+                <button type="submit" id="submit">Sign Up</button>
+            </form>
     
     </body>
 </html>
