--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -53,6 +53,11 @@
         <form action="/logout">
             <button type="submit">Log Out</button>
         </form>
+        <div class="edit_button">           
+            <form action="/users/<%= @current_user.id %>/edit">
+                <button type="submit">Edit Info</button>
+            </form>
+        </div>
     </div>
     </body>
 </html>   
