--- a/app/views/wishlists/index.erb
+++ b/app/views/wishlists/index.erb
@@ -66,7 +66,7 @@
         const selectWish = () => {
             let list = document.getElementById("select_wish").value
             window.location.replace(`http://localhost:9393/wishlists/${list}/edit`)
-            console.log(list)
+            // console.log(list)
         }
     </script>
 
