--- a/app/views/wishlists/edit.erb
+++ b/app/views/wishlists/edit.erb
@@ -53,7 +53,7 @@
             </form>
         </div>
         <div class="home">
-            <form action="/users/:id/home">
+            <form action="/users/<%= @current_user.id %>/home" method="POST">
                 <button type="submit">Home</button>
             </form>
         </div>
