--- a/app/views/wishlists/new.erb
+++ b/app/views/wishlists/new.erb
@@ -14,6 +14,6 @@
 <form action="/wishlists/<%= @user.id %>/index">
     <button type="submit">Go Back to Wishlist!</button>
 </form>
-<form action="/users/<%= @current_user.id %>/home" method="POST">
+<form action="/users/<%= @user.id %>/home" method="POST">
     <button type="submit">Home</button>
 </form>
