--- a/app/views/wishlists/show.erb
+++ b/app/views/wishlists/show.erb
@@ -4,4 +4,10 @@
 <form action="/wishlists/<%= @wish.id %>/edit" method="PATCH">
   <input type="submit" value="Edit Wish"/>
 </form>
+<div class="remove">
+            <form action="/wishlists/<%= @wish.id %>/delete" method="post">
+              <input id="hidden" type="hidden" name="_method" value="delete"/>
+              <button type="submit" id="submit">Remove Wish</button>
+            </form>	
+</div>
 <br>
