corrected user validation in patch route, refactored code in user and wishlist controllers

--- a/app/views/logins/login.erb
+++ b/app/views/logins/login.erb
@@ -45,9 +45,7 @@
                 </div>
             </form>
             <div class="signup_button">
-                <form action="/signups" method="POST">
-                    <button type="submit" id="submit">Sign Up</button>
-                </form>
+                    <a href="/signup">Sign Up</a>
             </div></p>
     </body>
 </html>
