--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -14,6 +14,18 @@ button {
 .button1 {
        float: left;
 }
+.button {
+  font: bold 11px Arial;
+  text-decoration: none;
+  background-color: #EEEEEE;
+  color: #333333;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
+
 
 .button2 {
        float: right;
@@ -30,15 +42,11 @@ button {
   <%# <a href='/logins/login'>Log In</a> %>
   <br>
   <div class="button1">
-       <form action="/logins/login">
-         <p><button type="submit">Log In</button></p>
-       </form>
+         <p><a class="button" href="/login">Log In</a></p>
   </div>
   <%# <a href="/signups/signup">Sign Up</a> %>
   <div class="button2">
-       <form action="/signups/signup">
-         <p><button type="submit">Sign up</button></p>
-       </form>
+         <p><a class="button" href="signup">Sign up</a></p>
   </div>
 </body>
 
