--- a/app/views/signups/signup.erb
+++ b/app/views/signups/signup.erb
@@ -5,7 +5,7 @@
     </style>
     </head>
     <body>
-        <font color="red">
+        <font color="white">
             <% if flash.has?(:message) %>
                 <%= flash[:message] %>
             <% end %>
